@@ -38,7 +38,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'depends' => array(
 			'cms' => '',
 			'php' => '5.0.0-5.3.99',
-			'typo3' => '4.1.0-4.3.99',
+			'typo3' => '4.1.0-4.5.99',
 		),
 		'conflicts' => array(
 		),
